radix-transactions/tests/assets/manifest_parser_error_max_depth_exceeded_1.rtm
CALL_FUNCTION
  Address("package_sim1p4r4955skdjq9swg8s5jguvcjvyj7tsxct87a9z6sw76cdfd2jg3zk")
  "blueprint"
  "func"
  Tuple(
    Tuple(
      Tuple(
        Tuple(
          Tuple(
            Tuple(
              Tuple(
                Tuple(
                  Tuple(
                    Tuple(
                      Tuple(
                        Tuple(
                          Tuple(
                            Tuple(
                              Tuple(
                                Tuple(
                                  Tuple(
                                    Tuple(
                                      Tuple(
                                        Tuple(
                                          Tuple(
                                            Tuple(
                                              Tuple(
                                                Tuple(
                                                  Tuple(
                                                    Tuple(
                                                      Tuple(
                                                        Tuple(
                                                          Tuple(0u8)
                                                        )
                                                      )
                                                    )
                                                  )
                                                )
                                              )
                                            )
                                          )
                                        )
                                      )
                                    )
                                  )
                                )
                              )
                            )
                          )
                        )
                      )
                    )
                  )
                )
              )
            )
          )
        )
      )
    )
  )
;
